test/distributions/sungeun/misc/no_use_BlockDist.good
no_use_BlockDist.chpl:3: error: Attempt to 'new' a function or undefined symbol
